добавил отступы на главной

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,34 +20,41 @@
   <body>
     <!-- header section -->
     <header class="page-header">
-      <a class="link logo" href="./index.html"
-        >Web<span class="accent-top">Studio</span></a
-      >
-      <nav class="header-nav">
-        <ul class="list header-list">
-          <li class="header-item">
-            <a class="link header-link" href="./index.html">Студия</a>
-          </li>
-          <li class="header-item">
-            <a class="link header-link current" href="">Портфолио</a>
-          </li>
-          <li class="header-item">
-            <a class="link header-link" href="">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="list header-connect">
-        <li class="header-mail">
-          <a class="link header-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="header-tel">
-          <a class="link header-link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      <div class="container">
+        <div class="container-head">
+          <div class="nav-container">
+            <a class="link logo" href="index.html"
+              >Web<span class="accent-top">Studio</span></a
+            >
+            <nav>
+              <ul class="list header-list">
+                <li class="header-item">
+                  <a class="link header-link" href="./index.html">Студия</a>
+                </li>
+                <li class="header-item">
+                  <a class="link header-link current" href="">Портфолио</a>
+                </li>
+                <li class="header-item">
+                  <a class="link header-link" href="">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <ul class="list header-connect">
+            <li class="header-mail">
+              <a class="link header-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-tel">
+              <a class="link header-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
     <!-- main section -->
     <main>
@@ -190,32 +197,36 @@
     </main>
     <!--section footer-->
     <footer class="footer">
-      <a class="link logo" href="index.html"
-        >Web<span class="accent-foot">Studio</span></a
-      >
-      <address class="address">
-        <ul class="list address-list">
-          <li class="address-item">
-            <a
-              class="link"
-              href="https://goo.gl/maps/kdyRsUSUZegwHqDn6"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><span class="address-city"
-                >г. Киев, пр-т Леси Украинки, 26</span
-              ></a
-            >
-          </li>
-          <li class="address-item connect">
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item connect">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="link logo" href="index.html"
+          >Web<span class="accent-foot">Studio</span></a
+        >
+        <address class="address">
+          <ul class="list address-list">
+            <li>
+              <a
+                class="link"
+                href="https://goo.gl/maps/kdyRsUSUZegwHqDn6"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><span class="address-city"
+                  >г. Киев, пр-т Леси Украинки, 26</span
+                ></a
+              >
+            </li>
+            <li>
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link tel-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
