--- a/index.html
+++ b/index.html
@@ -19,181 +19,205 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="link logo" href="index.html"
-        >Web<span class="accent-top">Studio</span></a
-      >
-      <nav class="header-nav">
-        <ul class="list header-list">
-          <li class="header-item">
-            <a class="link header-link current" href="">Студия</a>
-          </li>
-          <li class="header-item">
-            <a class="link header-link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-item">
-            <a class="link header-link" href="">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="list header-connect">
-        <li class="header-mail">
-          <a class="link header-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="header-tel">
-          <a class="link header-link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      <div class="container">
+        <div class="container-head">
+          <div class="nav-container">
+            <a class="link logo" href="index.html"
+              >Web<span class="accent-top">Studio</span></a
+            >
+            <nav>
+              <ul class="list header-list">
+                <li class="header-item">
+                  <a class="link header-link current" href="">Студия</a>
+                </li>
+                <li class="header-item">
+                  <a class="link header-link" href="./portfolio.html"
+                    >Портфолио</a
+                  >
+                </li>
+                <li class="header-item">
+                  <a class="link header-link" href="">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <ul class="list header-connect">
+            <li class="header-mail">
+              <a class="link header-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-tel">
+              <a class="link header-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <!--section hero-->
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <!-- <div class="container"> -->
+        <h1 class="hero-title">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
         <button type="button" class="hero-button">Заказать услугу</button>
+        <!-- </div> -->
       </section>
       <!--section services-->
       <section class="services">
-        <h2 class="visually-hidden">Особенности</h2>
-        <ul class="list services-list">
-          <li class="services-item">
-            <h3 class="services-title">Внимание к деталям</h3>
-            <p class="services-pre-title">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-title">Пунктуальность</h3>
-            <p class="services-pre-title">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-title">Планирование</h3>
-            <p class="services-pre-title">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="services-item">
-            <h3 class="services-title">Современные технологии</h3>
-            <p class="services-pre-title">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Особенности</h2>
+          <ul class="list services-list">
+            <li class="services-item">
+              <h3 class="services-title">Внимание к деталям</h3>
+              <p class="services-pre-title">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="services-item">
+              <h3 class="services-title">Пунктуальность</h3>
+              <p class="services-pre-title">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="services-item">
+              <h3 class="services-title">Планирование</h3>
+              <p class="services-pre-title">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="services-item">
+              <h3 class="services-title">Современные технологии</h3>
+              <p class="services-pre-title">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- section what are we doing-->
       <section class="doing">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="list doing-list">
-          <li class="doing-item">
-            <img
-              src="./images/keyboard-img.jpg"
-              alt="разработка программного обеспечения"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              src="./images/notebook-img.jpg"
-              alt="написание мобильного дизайна"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              src="./images/tablet-img.jpg"
-              alt="подбор цветовых гамм для ваших проектов"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="list doing-list">
+            <li class="doing-item">
+              <img
+                src="./images/keyboard-img.jpg"
+                alt="разработка программного обеспечения"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/notebook-img.jpg"
+                alt="написание мобильного дизайна"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/tablet-img.jpg"
+                alt="подбор цветовых гамм для ваших проектов"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--section our team-->
       <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="list team-list">
-          <li class="team-item">
-            <img
-              src="./images/product-designer-img.jpg"
-              alt="Игорь Демьяненко - Product Designer"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-pre-title">Игорь Демьяненко</h3>
-            <p class="team-post">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/frontend-developer-img.jpg"
-              alt="Ольга Репина - Frontend Developer"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-pre-title">Ольга Репина</h3>
-            <p class="team-post">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/marketing-img.jpg"
-              alt="Николай Тарасов - Marketing"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-pre-title">Николай Тарасов</h3>
-            <p class="team-post">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/ui-designer-img.jpg"
-              alt="Михаил Ермаков - UI Designer"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-pre-title">Михаил Ермаков</h3>
-            <p class="team-post">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="list team-list">
+            <li class="team-item">
+              <img
+                src="./images/product-designer-img.jpg"
+                alt="Игорь Демьяненко - Product Designer"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-pre-title">Игорь Демьяненко</h3>
+              <p class="team-post">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/frontend-developer-img.jpg"
+                alt="Ольга Репина - Frontend Developer"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-pre-title">Ольга Репина</h3>
+              <p class="team-post">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/marketing-img.jpg"
+                alt="Николай Тарасов - Marketing"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-pre-title">Николай Тарасов</h3>
+              <p class="team-post">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/ui-designer-img.jpg"
+                alt="Михаил Ермаков - UI Designer"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-pre-title">Михаил Ермаков</h3>
+              <p class="team-post">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--section footer-->
     <footer class="footer">
-      <a class="link logo" href="index.html"
-        >Web<span class="accent-foot">Studio</span></a
-      >
-      <address class="address">
-        <ul class="list address-list">
-          <li class="address-item">
-            <a
-              class="link"
-              href="https://goo.gl/maps/kdyRsUSUZegwHqDn6"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><span class="address-city"
-                >г. Киев, пр-т Леси Украинки, 26</span
-              ></a
-            >
-          </li>
-          <li class="address-item connect">
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item connect">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="link logo" href="index.html"
+          >Web<span class="accent-foot">Studio</span></a
+        >
+        <address class="address">
+          <ul class="list address-list">
+            <li>
+              <a
+                class="link"
+                href="https://goo.gl/maps/kdyRsUSUZegwHqDn6"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><span class="address-city"
+                  >г. Киев, пр-т Леси Украинки, 26</span
+                ></a
+              >
+            </li>
+            <li>
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link tel-link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
