добавил отступы в портфолио

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         >
         <address class="address">
           <ul class="list address-list">
-            <li>
+            <li class="address-item">
               <a
                 class="link"
                 href="https://goo.gl/maps/kdyRsUSUZegwHqDn6"
@@ -205,15 +205,13 @@
                 ></a
               >
             </li>
-            <li>
+            <li class="address-item">
               <a class="link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
-              <a class="link tel-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="address-item">
+              <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
