--- a/portfolio.html
+++ b/portfolio.html
@@ -61,197 +61,149 @@
     </header>
     <!-- main section -->
     <main>
-      <section>
+      <section class="main-cards">
         <h1 class="visually-hidden">Примеры наших работ</h1>
         <div class="container">
-          <div class="btn-container">
-            <ul class="list">
-              <li class="example-item">
-                <button class="link example-btn active" type="button">
-                  Все
-                </button>
-              </li>
-              <li class="example-item">
-                <button class="link example-btn" type="button">
-                  Веб-сайты
-                </button>
-              </li>
-              <li class="example-item">
-                <button class="link example-btn" type="button">
-                  Приложения
-                </button>
-              </li>
-              <li class="example-item">
-                <button class="link example-btn" type="button">Дизайн</button>
-              </li>
-              <li class="example-item">
-                <button class="link example-btn" type="button">
-                  Маркетинг
-                </button>
-              </li>
-            </ul>
-          </div>
+          <ul class="list btn-list">
+            <li class="example-item">
+              <button class="link example-btn active" type="button">Все</button>
+            </li>
+            <li class="example-item">
+              <button class="link example-btn" type="button">Веб-сайты</button>
+            </li>
+            <li class="example-item">
+              <button class="link example-btn" type="button">Приложения</button>
+            </li>
+            <li class="example-item">
+              <button class="link example-btn" type="button">Дизайн</button>
+            </li>
+            <li class="example-item">
+              <button class="link example-btn" type="button">Маркетинг</button>
+            </li>
+          </ul>
 
           <!-- CONTAINER CARDS -->
 
-          <div class="container-card">
-            <ul class="list portfolio-list">
-              <li class="pf-item">
-                <a
-                  class="link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><img
-                    src="./images/website-tehnokryak.jpg"
-                    alt="Веб-сайт Технокряк"
-                    width="370"
-                    height="294"
-                  />
-                  <h2 class="pf-title">Технокряк</h2>
-                  <p class="pf-pre-title">Веб-сайт</p></a
-                >
-              </li>
-              <li class="pf-item">
-                <a
-                  class="link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><img
-                    src="./images/design.jpg"
-                    alt="Постер Нью-Орлеан против Голд-Стар"
-                    width="370"
-                    height="294"
-                  />
-                  <h2 class="pf-title">
-                    Постер <span lang="en">New Orlean vs Golden Star</span>
-                  </h2>
-                  <p class="pf-pre-title">Дизайн</p></a
-                >
-              </li>
-              <li class="pf-item">
-                <a
-                  class="link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><img
-                    src="./images/app-rest-seafood.jpg"
-                    alt="Ресторан Сиафуд"
-                    width="370"
-                    height="294"
-                  />
-                  <h2 class="pf-title">
-                    Ресторан <span lang="en">Seafood</span>
-                  </h2>
-                  <p class="pf-pre-title">Приложение</p></a
-                >
-              </li>
-              <li class="pf-item">
-                <a
-                  class="link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><img
-                    src="./images/marketing-project-prime.jpg"
-                    alt="Проект Прайм"
-                    width="370"
-                    height="294"
-                  />
-                  <h2 class="pf-title">Проект <span lang="en">Prime</span></h2>
-                  <p class="pf-pre-title">Маркетинг</p></a
-                >
-              </li>
-              <li class="pf-item">
-                <a
-                  class="link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><img
-                    src="./images/app-project-boxes.jpg"
-                    alt="Проект Боксы"
-                    width="370"
-                    height="294"
-                  />
-                  <h2 class="pf-title">Проект <span lang="en">Boxes</span></h2>
-                  <p class="pf-pre-title">Приложение</p></a
-                >
-              </li>
-              <li class="pf-item">
-                <a
-                  class="link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><img
-                    src="./images/website-inspiration-has-no-borders.jpg"
-                    alt="У вдохновения нет границ"
-                    width="370"
-                    height="294"
-                  />
-                  <h2 class="pf-title">
-                    <span lang="en">Inspiration has no Borders</span>
-                  </h2>
-                  <p class="pf-pre-title">Веб-сайт</p></a
-                >
-              </li>
-              <li class="pf-item">
-                <a
-                  class="link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><img
-                    src="./images/design-limited-edition.jpg"
-                    alt="издание лимитед эдишн"
-                    width="370"
-                    height="294"
-                  />
-                  <h2 class="pf-title">
-                    Издание <span lang="en">Limited Edition</span>
-                  </h2>
-                  <p class="pf-pre-title">Дизайн</p></a
-                >
-              </li>
-              <li class="pf-item">
-                <a
-                  class="link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><img
-                    src="./images/marketing-project-lab.jpg"
-                    alt="Проект ЛАБ"
-                    width="370"
-                    height="294"
-                  />
-                  <h2 class="pf-title">Проект <span lang="en">LAB</span></h2>
-                  <p class="pf-pre-title">Маркетинг</p></a
-                >
-              </li>
-              <li class="pf-item">
-                <a
-                  class="link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><img
-                    src="./images/app-growing-business.jpg"
-                    alt="Растущий бизнес"
-                    width="370"
-                    height="294"
-                  />
-                  <h2 class="pf-title">
-                    <span lang="en">Growing Business</span>
-                  </h2>
-                  <p class="pf-pre-title">Приложение</p></a
-                >
-              </li>
-            </ul>
-          </div>
+          <ul class="list portfolio-list">
+            <li class="pf-item">
+              <a class="link" href="" target="_blank" rel="noopener noreferrer"
+                ><img
+                  src="./images/website-tehnokryak.jpg"
+                  alt="Веб-сайт Технокряк"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="pf-title">Технокряк</h2>
+                <p class="pf-pre-title">Веб-сайт</p></a
+              >
+            </li>
+            <li class="pf-item">
+              <a class="link" href="" target="_blank" rel="noopener noreferrer"
+                ><img
+                  src="./images/design.jpg"
+                  alt="Постер Нью-Орлеан против Голд-Стар"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="pf-title">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="pf-pre-title">Дизайн</p></a
+              >
+            </li>
+            <li class="pf-item">
+              <a class="link" href="" target="_blank" rel="noopener noreferrer"
+                ><img
+                  src="./images/app-rest-seafood.jpg"
+                  alt="Ресторан Сиафуд"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="pf-title">
+                  Ресторан <span lang="en">Seafood</span>
+                </h2>
+                <p class="pf-pre-title">Приложение</p></a
+              >
+            </li>
+            <li class="pf-item">
+              <a class="link" href="" target="_blank" rel="noopener noreferrer"
+                ><img
+                  src="./images/marketing-project-prime.jpg"
+                  alt="Проект Прайм"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="pf-title">Проект <span lang="en">Prime</span></h2>
+                <p class="pf-pre-title">Маркетинг</p></a
+              >
+            </li>
+            <li class="pf-item">
+              <a class="link" href="" target="_blank" rel="noopener noreferrer"
+                ><img
+                  src="./images/app-project-boxes.jpg"
+                  alt="Проект Боксы"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="pf-title">Проект <span lang="en">Boxes</span></h2>
+                <p class="pf-pre-title">Приложение</p></a
+              >
+            </li>
+            <li class="pf-item">
+              <a class="link" href="" target="_blank" rel="noopener noreferrer"
+                ><img
+                  src="./images/website-inspiration-has-no-borders.jpg"
+                  alt="У вдохновения нет границ"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="pf-title">
+                  <span lang="en">Inspiration has no Borders</span>
+                </h2>
+                <p class="pf-pre-title">Веб-сайт</p></a
+              >
+            </li>
+            <li class="pf-item">
+              <a class="link" href="" target="_blank" rel="noopener noreferrer"
+                ><img
+                  src="./images/design-limited-edition.jpg"
+                  alt="издание лимитед эдишн"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="pf-title">
+                  Издание <span lang="en">Limited Edition</span>
+                </h2>
+                <p class="pf-pre-title">Дизайн</p></a
+              >
+            </li>
+            <li class="pf-item">
+              <a class="link" href="" target="_blank" rel="noopener noreferrer"
+                ><img
+                  src="./images/marketing-project-lab.jpg"
+                  alt="Проект ЛАБ"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="pf-title">Проект <span lang="en">LAB</span></h2>
+                <p class="pf-pre-title">Маркетинг</p></a
+              >
+            </li>
+            <li class="pf-item">
+              <a class="link" href="" target="_blank" rel="noopener noreferrer"
+                ><img
+                  src="./images/app-growing-business.jpg"
+                  alt="Растущий бизнес"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="pf-title">
+                  <span lang="en">Growing Business</span>
+                </h2>
+                <p class="pf-pre-title">Приложение</p></a
+              >
+            </li>
+          </ul>
         </div>
       </section>
     </main>
