--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
           </div>
 
           <ul class="list header-connect">
-            <li class="header-mail">
+            <li class="header-item">
               <a class="link header-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="header-tel">
+            <li class="header-item">
               <a class="link header-link" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
@@ -73,32 +73,32 @@
         <!-- </div> -->
       </section>
       <!--section services-->
-      <section class="services">
+      <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
-          <ul class="list services-list">
-            <li class="services-item">
+          <ul class="list card-set">
+            <li class="item services-item">
               <h3 class="services-title">Внимание к деталям</h3>
               <p class="services-pre-title">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="services-item">
+            <li class="item services-item">
               <h3 class="services-title">Пунктуальность</h3>
               <p class="services-pre-title">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="services-item">
+            <li class="item services-item">
               <h3 class="services-title">Планирование</h3>
               <p class="services-pre-title">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="services-item">
+            <li class="item services-item">
               <h3 class="services-title">Современные технологии</h3>
               <p class="services-pre-title">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -109,11 +109,11 @@
         </div>
       </section>
       <!-- section what are we doing-->
-      <section class="doing">
+      <section class="section doing">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="list doing-list">
-            <li class="doing-item">
+          <ul class="list card-set">
+            <li class="item doing-item">
               <img
                 src="./images/keyboard-img.jpg"
                 alt="разработка программного обеспечения"
@@ -121,7 +121,7 @@
                 height="294"
               />
             </li>
-            <li class="doing-item">
+            <li class="item doing-item">
               <img
                 src="./images/notebook-img.jpg"
                 alt="написание мобильного дизайна"
@@ -129,7 +129,7 @@
                 height="294"
               />
             </li>
-            <li class="doing-item">
+            <li class="item doing-item">
               <img
                 src="./images/tablet-img.jpg"
                 alt="подбор цветовых гамм для ваших проектов"
@@ -141,49 +141,57 @@
         </div>
       </section>
       <!--section our team-->
-      <section class="team">
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="list team-list">
-            <li class="team-item">
+          <ul class="list card-set">
+            <li class="item team-item">
               <img
                 src="./images/product-designer-img.jpg"
                 alt="Игорь Демьяненко - Product Designer"
                 width="270"
                 height="260"
               />
-              <h3 class="team-pre-title">Игорь Демьяненко</h3>
-              <p class="team-post">Product Designer</p>
+              <div class="card-title">
+                <h3 class="team-pre-title">Игорь Демьяненко</h3>
+                <p class="team-post">Product Designer</p>
+              </div>
             </li>
-            <li class="team-item">
+            <li class="item team-item">
               <img
                 src="./images/frontend-developer-img.jpg"
                 alt="Ольга Репина - Frontend Developer"
                 width="270"
                 height="260"
               />
-              <h3 class="team-pre-title">Ольга Репина</h3>
-              <p class="team-post">Frontend Developer</p>
+              <div class="card-title">
+                <h3 class="team-pre-title">Ольга Репина</h3>
+                <p class="team-post">Frontend Developer</p>
+              </div>
             </li>
-            <li class="team-item">
+            <li class="item team-item">
               <img
                 src="./images/marketing-img.jpg"
                 alt="Николай Тарасов - Marketing"
                 width="270"
                 height="260"
               />
-              <h3 class="team-pre-title">Николай Тарасов</h3>
-              <p class="team-post">Marketing</p>
+              <div class="card-title">
+                <h3 class="team-pre-title">Николай Тарасов</h3>
+                <p class="team-post">Marketing</p>
+              </div>
             </li>
-            <li class="team-item">
+            <li class="item team-item">
               <img
                 src="./images/ui-designer-img.jpg"
                 alt="Михаил Ермаков - UI Designer"
                 width="270"
                 height="260"
               />
-              <h3 class="team-pre-title">Михаил Ермаков</h3>
-              <p class="team-post">UI Designer</p>
+              <div class="card-title">
+                <h3 class="team-pre-title">Михаил Ермаков</h3>
+                <p class="team-post">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
