--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
     </header>
     <!-- main section -->
     <main>
-      <section class="main-cards">
+      <section class="section">
         <h1 class="visually-hidden">Примеры наших работ</h1>
         <div class="container">
           <ul class="list btn-list">
@@ -84,8 +84,8 @@
 
           <!-- CONTAINER CARDS -->
 
-          <ul class="list portfolio-list">
-            <li class="pf-item">
+          <ul class="list card-set">
+            <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
                 ><img
                   src="./images/website-tehnokryak.jpg"
@@ -93,11 +93,13 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="pf-title">Технокряк</h2>
-                <p class="pf-pre-title">Веб-сайт</p></a
-              >
+              <div class="pf-wrapper">
+                  <h2 class="pf-title">Технокряк</h2>
+                  <p class="pf-pre-title">Веб-сайт</p></a
+                >
+              </div>
             </li>
-            <li class="pf-item">
+            <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
                 ><img
                   src="./images/design.jpg"
@@ -105,13 +107,15 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="pf-title">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h2>
+                <div class="pf-wrapper">
+                  <h2 class="pf-title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
                 <p class="pf-pre-title">Дизайн</p></a
-              >
+                >
+              </div>
             </li>
-            <li class="pf-item">
+            <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
                 ><img
                   src="./images/app-rest-seafood.jpg"
@@ -119,13 +123,15 @@
                   width="370"
                   height="294"
                 />
+                <div class="pf-wrapper">
                 <h2 class="pf-title">
                   Ресторан <span lang="en">Seafood</span>
                 </h2>
                 <p class="pf-pre-title">Приложение</p></a
               >
+              </div>
             </li>
-            <li class="pf-item">
+            <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
                 ><img
                   src="./images/marketing-project-prime.jpg"
@@ -133,11 +139,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="pf-wrapper">
                 <h2 class="pf-title">Проект <span lang="en">Prime</span></h2>
                 <p class="pf-pre-title">Маркетинг</p></a
               >
+              </div>
             </li>
-            <li class="pf-item">
+            <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
                 ><img
                   src="./images/app-project-boxes.jpg"
@@ -145,11 +153,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="pf-wrapper">
                 <h2 class="pf-title">Проект <span lang="en">Boxes</span></h2>
                 <p class="pf-pre-title">Приложение</p></a
               >
+              </div>
             </li>
-            <li class="pf-item">
+            <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
                 ><img
                   src="./images/website-inspiration-has-no-borders.jpg"
@@ -157,13 +167,15 @@
                   width="370"
                   height="294"
                 />
+                <div class="pf-wrapper">
                 <h2 class="pf-title">
                   <span lang="en">Inspiration has no Borders</span>
                 </h2>
                 <p class="pf-pre-title">Веб-сайт</p></a
               >
+              </div>
             </li>
-            <li class="pf-item">
+            <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
                 ><img
                   src="./images/design-limited-edition.jpg"
@@ -171,13 +183,15 @@
                   width="370"
                   height="294"
                 />
+                <div class="pf-wrapper">
                 <h2 class="pf-title">
                   Издание <span lang="en">Limited Edition</span>
                 </h2>
                 <p class="pf-pre-title">Дизайн</p></a
               >
+              </div>
             </li>
-            <li class="pf-item">
+            <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
                 ><img
                   src="./images/marketing-project-lab.jpg"
@@ -185,11 +199,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="pf-wrapper">
                 <h2 class="pf-title">Проект <span lang="en">LAB</span></h2>
                 <p class="pf-pre-title">Маркетинг</p></a
               >
+              </div>
             </li>
-            <li class="pf-item">
+            <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
                 ><img
                   src="./images/app-growing-business.jpg"
@@ -197,11 +213,13 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="pf-title">
-                  <span lang="en">Growing Business</span>
-                </h2>
-                <p class="pf-pre-title">Приложение</p></a
+                <div class="pf-wrapper">
+                  <h2 class="pf-title">
+                    <span lang="en">Growing Business</span>
+                  </h2>
+                  <p class="pf-pre-title">Приложение</p></a
               >
+              </div>
             </li>
           </ul>
         </div>
