--- a/portfolio.html
+++ b/portfolio.html
@@ -93,11 +93,11 @@
                   width="370"
                   height="294"
                 />
-              <div class="pf-wrapper">
+                <div class="pf-wrapper">
                   <h2 class="pf-title">Технокряк</h2>
-                  <p class="pf-pre-title">Веб-сайт</p></a
-                >
-              </div>
+                  <p class="pf-pre-title">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
@@ -111,9 +111,9 @@
                   <h2 class="pf-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h2>
-                <p class="pf-pre-title">Дизайн</p></a
-                >
-              </div>
+                  <p class="pf-pre-title">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
@@ -124,12 +124,12 @@
                   height="294"
                 />
                 <div class="pf-wrapper">
-                <h2 class="pf-title">
-                  Ресторан <span lang="en">Seafood</span>
-                </h2>
-                <p class="pf-pre-title">Приложение</p></a
-              >
-              </div>
+                  <h2 class="pf-title">
+                    Ресторан <span lang="en">Seafood</span>
+                  </h2>
+                  <p class="pf-pre-title">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
@@ -140,10 +140,10 @@
                   height="294"
                 />
                 <div class="pf-wrapper">
-                <h2 class="pf-title">Проект <span lang="en">Prime</span></h2>
-                <p class="pf-pre-title">Маркетинг</p></a
-              >
-              </div>
+                  <h2 class="pf-title">Проект <span lang="en">Prime</span></h2>
+                  <p class="pf-pre-title">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
@@ -154,10 +154,10 @@
                   height="294"
                 />
                 <div class="pf-wrapper">
-                <h2 class="pf-title">Проект <span lang="en">Boxes</span></h2>
-                <p class="pf-pre-title">Приложение</p></a
-              >
-              </div>
+                  <h2 class="pf-title">Проект <span lang="en">Boxes</span></h2>
+                  <p class="pf-pre-title">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
@@ -168,12 +168,12 @@
                   height="294"
                 />
                 <div class="pf-wrapper">
-                <h2 class="pf-title">
-                  <span lang="en">Inspiration has no Borders</span>
-                </h2>
-                <p class="pf-pre-title">Веб-сайт</p></a
-              >
-              </div>
+                  <h2 class="pf-title">
+                    <span lang="en">Inspiration has no Borders</span>
+                  </h2>
+                  <p class="pf-pre-title">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
@@ -184,12 +184,12 @@
                   height="294"
                 />
                 <div class="pf-wrapper">
-                <h2 class="pf-title">
-                  Издание <span lang="en">Limited Edition</span>
-                </h2>
-                <p class="pf-pre-title">Дизайн</p></a
-              >
-              </div>
+                  <h2 class="pf-title">
+                    Издание <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="pf-pre-title">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
@@ -200,10 +200,10 @@
                   height="294"
                 />
                 <div class="pf-wrapper">
-                <h2 class="pf-title">Проект <span lang="en">LAB</span></h2>
-                <p class="pf-pre-title">Маркетинг</p></a
-              >
-              </div>
+                  <h2 class="pf-title">Проект <span lang="en">LAB</span></h2>
+                  <p class="pf-pre-title">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item pf-item">
               <a class="link" href="" target="_blank" rel="noopener noreferrer"
@@ -217,9 +217,9 @@
                   <h2 class="pf-title">
                     <span lang="en">Growing Business</span>
                   </h2>
-                  <p class="pf-pre-title">Приложение</p></a
-              >
-              </div>
+                  <p class="pf-pre-title">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
